<resources>
    <string name="app_name">Calculator</string>
    <string name="divideByZero">You can\'t divide by zero.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="division">/</string>
    <string name="mult">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="root">√</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sqr">x²</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="percent">%</string>
    <string name="c">C</string>
</resources>