<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_mild"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="30sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/mult"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/minus"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/plus"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/seven"
            android:textColor="#4527A0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/eight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/eight"
            android:textColor="#4527A0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/nine"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/nine"
            android:textColor="#4527A0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/root"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/four"
            android:textColor="#4527A0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/five"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/five"
            android:textColor="#4527A0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/six"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/six"
            android:textColor="#4527A0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/sqr"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/one"
            android:textColor="#4527A0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/two"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/two"
            android:textColor="#4527A0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/three"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/three"
            android:textColor="#4527A0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/equal"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/dot"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/zero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/zero"
            android:textColor="#4527A0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/percent"
            android:textSize="30sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/calc"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/c"
            android:textColor="#4A148C"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>